--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,27 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/splash4"
+    android:gravity="top|center_horizontal">
+
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView3"
-        android:src="@drawable/presto_spalsh_2"
-        android:scaleType="centerCrop"/>
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:id="@+id/imageView1"
+        android:src="@drawable/logo3"
+        android:layout_alignParentStart="false"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true" />
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
+        android:layout_below="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_alignParentEnd="false"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="40dp"/>
+        android:layout_alignParentBottom="false"
+        android:layout_marginBottom="0dp"
+        android:layout_marginTop="20dp"
+        android:layout_centerInParent="true" />
 
 
-</LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:id="@+id/imageView2"
+        android:src="@drawable/title"
+        android:layout_below="@+id/sign_in_button"
+        android:layout_marginTop="20dp"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView3"
+        android:src="@drawable/sub_title"
+        android:layout_below="@+id/imageView2"/>
+
+
+
+</RelativeLayout>
