--- a/app/src/main/res/layout/activity_onboard_location.xml
+++ b/app/src/main/res/layout/activity_onboard_location.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Help us find You !"
+        android:text="Find Drivers closets to You!"
         android:id="@+id/textView4"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
@@ -20,7 +20,7 @@
         android:layout_marginTop="20dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Get Done Now will need your permission to access your location so we can get you connected to our Freelancers in your area"
+        android:text="To get you in touch with drivers closets to you, we will need your permission to know your location"
         android:id="@+id/textView5"
         android:layout_gravity="center_horizontal"
         android:textAlignment="center"
@@ -39,13 +39,14 @@
         android:layout_marginRight="20dp" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Allow"
+        android:text="Ask Permission"
         android:id="@+id/next2"
         android:layout_gravity="center_horizontal"
         android:textColor="#ffffff"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:background="@color/accent"/>
 
 
 </LinearLayout>
