--- a/app/src/main/res/layout/activity_onboard_newuser.xml
+++ b/app/src/main/res/layout/activity_onboard_newuser.xml
@@ -13,93 +13,89 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Welcome"
         android:layout_centerInParent="true"
-        android:id="@+id/textView2"
+        android:id="@+id/welcome_tv"
         android:layout_gravity="center"
         android:textColor="#fffefe"
-        android:layout_marginTop="40dp"
         android:layout_alignParentTop="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Lets get you started!"
+        android:id="@+id/sub_title"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/accent"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/welcome_tv" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_centerInParent="true"
-        android:layout_below="@id/textView2"
+        android:layout_below="@id/sub_title"
         android:id="@+id/profile_image"
         android:layout_width="126dp"
         android:layout_height="126dp"
         android:background="@color/primary"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="40dp"
         android:src="@drawable/profile"
         app:civ_border_width="6dp"
-        app:civ_border_color="@color/primary_dark"
+        app:civ_border_color="@color/accent"
         android:gravity="center"/>
 
     <TextView
-        android:layout_centerInParent="true"
-        android:layout_below="@id/profile_image"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="User"
-        android:id="@+id/user_name"
-        android:layout_gravity="center_horizontal"
-        android:textColor="#ffffff"
-        android:singleLine="true"
-        android:layout_marginTop="10dp" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Help our drivers recognize you. Upload a picture of your business here."
+        android:id="@+id/profile_picture_text"
+        android:layout_below="@+id/profile_image"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:textAlignment="center" />
+
 
     <TextView
         android:layout_centerInParent="true"
-        android:layout_below="@id/user_name"
+        android:id="@+id/display_name_tv"
+        android:layout_below="@id/profile_picture_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Enter a Password"
-        android:id="@+id/textView3"
+        android:text="Enter Your Name"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:textColor="#ffffff" />
 
     <EditText
         android:layout_centerInParent="true"
         android:maxLines="1"
-        android:layout_below="@id/textView3"
+        android:layout_below="@id/display_name_tv"
         android:layout_width="200dp"
         android:layout_height="30dp"
-        android:id="@+id/editText"
+        android:id="@+id/display_name_et"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:background="#ffffff"
         android:textAlignment="center"
-        android:hint="Password"
+        android:hint="Your Name"
         android:textSize="14dp"
         android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:nextFocusDown="@+id/editText2"/>
+        android:focusableInTouchMode="true"/>
 
-    <EditText
-        android:layout_below="@id/editText"
-        android:maxLines="1"
-        android:layout_centerInParent="true"
-        android:layout_width="200dp"
-        android:layout_height="30dp"
-        android:id="@+id/editText2"
-        android:layout_marginTop="20dp"
-        android:background="#ffffff"
-        android:textAlignment="center"
-        android:textSize="14dp"
-        android:hint="Repeat Password"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:nextFocusDown="@+id/next1"/>
 
     <Button
         android:layout_centerInParent="true"
-        android:layout_below="@id/editText2"
+        android:layout_below="@id/display_name_et"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Next"
+        android:text="Save"
         android:id="@+id/next1"
         android:layout_gravity="center_horizontal"
         android:textColor="#ffffff"
-        android:layout_marginTop="80dp"
-        android:nextFocusForward="@+id/editText2"/>
-    -->
+        android:layout_marginTop="40dp"
+        android:nextFocusForward="@+id/editText2"
+        android:background="@color/accent" />
+
+
+
 </RelativeLayout>
