--- a/app/src/main/res/layout/dialog_ratings.xml
+++ b/app/src/main/res/layout/dialog_ratings.xml
@@ -2,43 +2,54 @@
 
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:gravity="center_vertical|center_horizontal"
     android:orientation="vertical"
-    android:padding="2dip"
-    android:gravity="center_vertical|center_horizontal">
+    android:padding="2dip">
 
-<TextView android:text="Doctor's Name" android:id="@+id/rank_dialog_text1"
-    android:textSize="24dp" android:layout_marginTop="10dp"
-    android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:layout_gravity="center"/>
+    <TextView
+        android:id="@+id/rank_dialog_text1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:text="Name"
+        android:textSize="24dp" />
 
-<de.hdodenhof.circleimageview.CircleImageView
-    android:layout_centerInParent="true"
-    android:layout_below="@id/textView2"
-    android:id="@+id/profile_image"
-    android:layout_width="126dp"
-    android:layout_height="126dp"
-    android:background="@color/primary"
-    android:layout_marginTop="10dp"
-    android:src="@drawable/profile"
-    app:civ_border_width="6dp"
-    app:civ_border_color="@color/primary_dark"
-    android:gravity="center"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_image"
+        android:layout_width="126dp"
+        android:layout_height="126dp"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:src="@drawable/profile"
+        app:civ_border_color="@color/primary_dark"
+        app:civ_border_width="6dp" />
 
-<RatingBar
-    android:layout_marginTop="10dp" android:layout_marginBottom="10dp"
-    android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:clickable="true"
-    android:id="@+id/dialog_ratingbar" android:layout_gravity="center"
-    android:numStars="5" android:stepSize="1.0" android:rating="2"
-    android:isIndicator="false"/>
+    <RatingBar
+        android:id="@+id/dialog_ratingbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:clickable="true"
+        android:isIndicator="false"
+        android:numStars="5"
+        android:rating="2"
+        android:stepSize="1.0" />
 
-<Button android:id="@+id/rank_dialog_button"
-    android:layout_height="wrap_content"
-    android:text="Update"  android:focusable="false"
-    android:layout_margin="5dip" android:textColor="#FFF8C6"
-    android:textSize="20dip" android:layout_width="fill_parent" />
+    <Button
+        android:id="@+id/rank_dialog_button"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dip"
+        android:focusable="false"
+        android:text="Update"
+        android:textColor="#FFF8C6"
+        android:textSize="20dip" />
 
 </LinearLayout>
